todo-app/manifests/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-pvc
      containers:
        - name: todo-app
          image: todo-app:1.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-data
              mountPath: /data
